// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-0-menu"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-0-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-1dwg83m"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-check-mark.svg
          </svg>
        </div>
        <span>
          Success
        </span>
      </div>
      <div
        class="css-k5jr4t"
      >
        Successfully connected
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on connection fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-13-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-13-input"
                  id="downshift-13-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-13-menu"
                      aria-labelledby="downshift-13-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-13-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-13-label"
                id="downshift-13-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        Unable to connect to Ledger device. Please ensure that all other applications that connect to your Ledger are closed.
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should render cancel screen 1`] = `
<div>
  <div
    class="space-y-8"
    data-testid="LedgerCancellingScreen"
  >
    <svg
      class="mx-auto max-w-full"
    >
      error-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="animate-pulse font-semibold text-theme-secondary-text"
      >
        Cancelling Ledger Import, please wait...
      </span>
    </div>
  </div>
</div>
`;

exports[`LedgerConnectionStep should show update error if app version is less than minimum version 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value="ark.devnet"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-27-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-27-input"
                  id="downshift-27-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  ARK Devnet
                  …
                </div>
                <div
                  class="css-n29l73"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="flex items-center justify-center rounded-xl p-1 text-theme-secondary-700"
                  >
                    <div
                      class="css-v0ob3f"
                      data-testid="NetworkIcon__icon"
                      height="16"
                      width="16"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-27-menu"
                      aria-labelledby="downshift-27-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="downshift-27-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value="ARK Devnet"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        ARK Devnet
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-27-label"
                id="downshift-27-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        The ARK app version is 1.0.1. Please update the ARK app via Ledger Live.
      </div>
    </div>
  </section>
</div>
`;
